Implemented logic, updated tests to use implemented code

--- a/PromotionEngine/PromotionEngine.csproj
+++ b/PromotionEngine/PromotionEngine.csproj
@@ -41,11 +41,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PromotionEngine.cs" />
+    <Compile Include="Cart.cs" />
+    <Compile Include="CartItem.cs" />
     <Compile Include="Interfaces\ICart.cs" />
     <Compile Include="Interfaces\ICartItem.cs" />
     <Compile Include="Interfaces\IPromotion.cs" />
     <Compile Include="Interfaces\IPromotions.cs" />
+    <Compile Include="Promotions\Promotion2B.cs" />
+    <Compile Include="Promotions\Promotion3A.cs" />
+    <Compile Include="Promotions\PromotionCD.cs" />
+    <Compile Include="Promotions\Promotions.cs" />
+    <Compile Include="Item.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup />
